Init Symfony & AppBundle

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,15 @@
 .vagrant/
 
+# Symfony
+/web/bundles/
+/app/bootstrap.php.cache
+/app/cache/*
+/app/config/parameters.yml
+/app/logs/*
+!app/cache/.gitkeep
+!app/logs/.gitkeep
+/app/phpunit.xml
+/build/
+/vendor/
+/bin/
+/composer.phar
