--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "sensio/distribution-bundle": "~3.0,>=3.0.12",
         "sensio/framework-extra-bundle": "~3.0,>=3.0.2",
         "incenteev/composer-parameter-handler": "~2.0",
-        "phpunit/phpunit": "~4.5"
+        "phpunit/phpunit": "~4.5",
+        "besimple/i18n-routing-bundle": "~2.3"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
