--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/routing.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/routing.yml
@@ -1,3 +1,5 @@
-app_homepage:
-    path:     /hello/{name}
+haphpy_index:
+    locales:
+        en: "/en/"
+        fr: "/fr/"
     defaults: { _controller: AppBundle:Default:index }
