--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
         "phpunit/phpunit": "~4.5",
         "besimple/i18n-routing-bundle": "~2.3",
         "m6web/coke": "~1.2",
-        "m6web/Symfony2-coding-standard": "~1.1"
+        "m6web/Symfony2-coding-standard": "~1.1",
+        "hwi/oauth-bundle": "0.4.*@dev"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
