--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -23,3 +23,6 @@ parameters:
     accepted_languages:
         - fr
         - en
+
+    # Third party authentication
+    github_secret:     githubClientSecret
