Add Contributions directory in Ansible

--- a/ansible/roles/app/tasks/main.yml
+++ b/ansible/roles/app/tasks/main.yml
@@ -1,2 +1,8 @@
 ---
-# application tasks to be customized and to run after the main provision
+
+- name: Creates Contribution Media directory
+  file: path=/var/haphpy/contributions state=directory group=www-data mode=0770
+
+- name: Add vagrant user to www-data
+  user: name=vagrant groups=www-data append=yes
+  #when: vagrant environment @TODO
