--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -26,3 +26,6 @@ parameters:
 
     # Third party authentication
     github_secret:     githubClientSecret
+
+    # media directory for contributions storage
+    contribution_dir: /var/haphpy/contributions
