Move Contribution and file persistence to a dedicated class

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/services.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/services.yml
@@ -10,5 +10,6 @@ services:
         class: AFUP\HaphpyBirthdayBundle\Service\PathGenerator
         arguments: ['%contribution_dir%']
 
-    haphpy.media_persister:
-        class: AFUP\HaphpyBirthdayBundle\Service\MediaPersister
+    haphpy.contribution_persister:
+        class: AFUP\HaphpyBirthdayBundle\Service\ContributionPersister
+        arguments: [@doctrine.orm.entity_manager, @haphpy.path_generator]
