Fix credit feature

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/doctrine/Contribution.orm.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/doctrine/Contribution.orm.yml
@@ -13,6 +13,9 @@ AFUP\HaphpyBirthdayBundle\Entity\Contribution:
         identifier:
             type:   string
             length: 255
+        creditWanted:
+            type:   boolean
+            column: credit_wanted
         createdAt:
             type:   datetime
             column: created_at
