--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -1,11 +1,6 @@
-# Learn more about services, parameters and containers at
-# http://symfony.com/doc/current/book/service_container.html
-parameters:
-#    parameter_name: value
-
-# services:
-#     haphpy.command.generate_contributions:
-#         class: AFUP\HaphpyBirthdayBundle\Command\GenerateContributionsCommand
-#         arguments: ['%contributed_media.root_dir%']
-#         tags:
-#             -  { name: console.command }
+services:
+    haphpy.command.generate_contributions:
+        class: AFUP\HaphpyBirthdayBundle\Command\GenerateContributionsCommand
+        arguments: [@haphpy.contribution_persister]
+        tags:
+            -  { name: console.command }
