Create Contributions page with only contributors list

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/doctrine/Contribution.orm.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/doctrine/Contribution.orm.yml
@@ -1,5 +1,6 @@
 AFUP\HaphpyBirthdayBundle\Entity\Contribution:
     type: entity
+    repositoryClass: AFUP\HaphpyBirthdayBundle\Entity\ContributionRepository
     table: contribution
     id:
         id:
