--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/services.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/services.yml
@@ -13,3 +13,10 @@ services:
     haphpy.contribution_persister:
         class: AFUP\HaphpyBirthdayBundle\Service\ContributionPersister
         arguments: [@doctrine.orm.entity_manager, @haphpy.path_generator]
+
+    haphpy.contribution_repository:
+        class: Doctrine\ORM\EntityRepository
+        factory_service: doctrine.orm.default_entity_manager
+        factory_method: getRepository
+        arguments:
+            - AFUP\HaphpyBirthdayBundle\Entity\Contribution
