Add Limit Date to About page

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -29,6 +29,8 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    globals:
+        limit_date: "%limit_date%"
 
 # Assetic Configuration
 assetic:
