Add PHP User groups to contributions page

--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -38,3 +38,7 @@ parameters:
         - {name: min, value: 100}
         - {name: joy, value: 250}
         - {name: top, value: 500}
+
+    # PHP user groups config
+    pug_list: "%kernel.root_dir%/../src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml"
+
