--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -4,6 +4,8 @@ parameters:
 #    parameter_name: value
 
 services:
-#    service_name:
-#        class: AppBundle\Directory\ClassName
-#        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+    twig.extension.array:
+       class: Twig_Extensions_Extension_Array
+       tags:
+            - { name: twig.extension }
+
