--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "besimple/i18n-routing-bundle": "~2.3",
         "m6web/coke": "~1.2",
         "m6web/Symfony2-coding-standard": "~1.1",
-        "hwi/oauth-bundle": "0.4.*@dev"
+        "hwi/oauth-bundle": "0.4.*@dev",
+        "woecifaun/translation-bridge-bundle": "~0.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
@@ -61,6 +62,12 @@
         },
         "branch-alias": {
             "dev-master": "2.6-dev"
+        }
+    },
+    "repositories": {
+        "translation-bridge": {
+            "type": "vcs",
+            "url": "https://github.com/woecifaun/translation-bridge-bundle"
         }
     }
 }
