--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -14,12 +14,12 @@ parameters:
     mailer_user:       ~
     mailer_password:   ~
 
-    locale:            en
-
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
 
-    # Accepted language for the site
+    locale:            en
+
+    # Accepted languages for the site
     accepted_languages:
         - en
         - fr
@@ -28,7 +28,8 @@ parameters:
     woecifaun.translationBridge.appLocales: "%accepted_languages%"
 
     # Third party authentication
-    github_secret:     githubClientSecret
+    github_client_id: ~
+    github_secret:    ~
 
     # media directory for contributions storage
     contribution_dir:  /var/haphpy/contributions
