swapped PNG for SVG format

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
@@ -124,7 +124,7 @@ sweetlakephp:
     displayed_name: SweetlakePHP
     full_name:      SweetlakePHP
     parent:
-    picture:        sweetlakephp.png
+    picture:        sweetlakephp.svg
     website:        http://sweetlakephp.nl
     twitter:        SweetlakePHP
     country:        NL
