--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
@@ -139,3 +139,12 @@ zgphp:
     twitter:        zgphp
     country:        Croatia
     city:           Zagreb
+phppb:
+    displayed_name: PHP-PB
+    full_name:      PHP-PB (Paraíba PHP Users Group)
+    parent:         ~
+    picture:        phppb.png
+    website:        http://php-pb.net/
+    twitter:        phppb
+    country:        Brazil
+    city:           Joao Pessoa
