--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -83,3 +83,7 @@ hwi_oauth:
             type:          github
             client_id:     "%github_client_id%"
             client_secret: "%github_secret%"
+        twitter:
+            type:          twitter
+            client_id:     "%twitter_client_id%"
+            client_secret: "%twitter_secret%"
