--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -14,6 +14,7 @@ security:
             oauth:
                 resource_owners:
                     github:   "/login/check-github"
+                    twitter:   "/login/check-twitter"
                 login_path:   /login
                 use_forward:  false
                 failure_path: /login
