changed PHPNW image to svg

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
@@ -152,7 +152,7 @@ phpnw:
     displayed_name: PHPNW
     full_name:      PHP North West
     parent:
-    picture:        phpnw.org.uk
+    picture:        phpnw.svg
     website:        http://phpnw.org.uk
     twitter:        PHPNW
     country:        UK
