add demo label message
By adding to the parameters.yml file :
```
header_message: "This is a demo environnement"
```

The message will be displayed in the header.

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -31,6 +31,7 @@ twig:
     strict_variables: "%kernel.debug%"
     globals:
         limit_date: "%limit_date%"
+        header_message: %header_message%
 
 # Assetic Configuration
 assetic:
