add pug count to gauge total
cf #36

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/services.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/services.yml
@@ -21,6 +21,10 @@ services:
         arguments:
             - AFUP\HaphpyBirthdayBundle\Entity\Contribution
 
+    haphpy.pugs:
+        class: AFUP\HaphpyBirthdayBundle\Model\Pugs
+        arguments: ["%pug_list%"]
+
     haphpy.gauge:
         class: AFUP\HaphpyBirthdayBundle\Model\Gauge
-        arguments: [@haphpy.contribution_repository, "%haphpy_steps%"]
+        arguments: [@haphpy.contribution_repository, @haphpy.pugs, "%haphpy_steps%"]
