--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -41,6 +41,8 @@ parameters:
     # Limit date for media contribution
     limit_date: '2015-10-31 23:59:59 UTC'
 
+    ga_ua: null
+
     # Expected steps and goal for the quantity of contributions
     haphpy_steps:
         - {name: min, value: 100}
