--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -49,5 +49,7 @@ parameters:
 
     # PHP user groups config
     pug_list: "%kernel.root_dir%/../src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml"
-    header_message: "This is a developpement environnement"
+
+    # Display a warning message in the top if not null (used for demo)
+    warning_message: ~
 
