added button to remove contribution
cf #40

The filename is now stored in the contribution table.

If the filename is not empty the form to submit the contribution
is hidden and a thanks message is displayed.

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/doctrine/Contribution.orm.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/doctrine/Contribution.orm.yml
@@ -14,6 +14,9 @@ AFUP\HaphpyBirthdayBundle\Entity\Contribution:
         identifier:
             type:   string
             length: 255
+        fileName:
+            type:   string
+            length: 255
         creditWanted:
             type:   boolean
             column: credit_wanted
