display image contributions

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/routing.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/routing.yml
@@ -24,3 +24,8 @@ haphpy_delete:
         en: "/delete"
         fr: "/delete"
     defaults: { _controller: AppBundle:Default:delete }
+
+
+view_contribution:
+    path: "contribution/view"
+    defaults: { _controller: AppBundle:Default:viewContribution }
