--- a/ansible/roles/phpcommon/tasks/main.yml
+++ b/ansible/roles/phpcommon/tasks/main.yml
@@ -2,3 +2,11 @@
   sudo: yes
   apt: pkg={{ item }} state=latest
   with_items: php_packages
+
+- name: Place PHP configuration file in place.
+  template:
+    src: php.ini.j2
+    dest: "{{ php_conf_path }}/php.ini"
+  notify:
+    - restart php5-fpm
+    - restart nginx
