Switch to PHP 7
Init PHP 7 install
Change box to debian/jessie
Clean useless Ansible roles
Install MariaDB with user
Add PHP7 trough zend repo
Init Apache setup
Setup Apache with vhost for Symfony
Clean php7 install branch

--- a/ansible/playbook.yml
+++ b/ansible/playbook.yml
@@ -6,15 +6,11 @@
     servername: haphpy-birthday.dev www.haphpy-birthday.dev 192.168.33.99
     timezone: UTC
   vars_files:
-    - vars/mariadb.yml
     - vars/common.yml
-    - [ "vars/nginxphp.yml", "vars/ws_defaults.yml" ]
   roles:
     - init
-    - php5-cli
-    - nginx
-    - php5-fpm
-    - mariadb
+    - mariadb-server
+    - apache
+    - php7
     - composer
-    - phpcommon
     - app
