--- a/ansible/vars/common.yml
+++ b/ansible/vars/common.yml
@@ -1,10 +1,9 @@
 ---
-    php_ppa: php5-5.6
     doc_root: /vagrant/web
-    sys_packages: ["vim","git"]
-    dist: precise
+    sys_packages:
+        - vim
+        - git
     php_packages: ["php5-cli","php5-curl","php5-fpm","php5-intl","php5-mysql","php5-xdebug"]
-    php_conf_path: /etc/php5/fpm
     pecl_packages: []
     # Upload File Max Size in MegaBytes (used by Nginx & php.ini)
     upload_max_size: 30
