--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
@@ -1,15 +1,5 @@
 ---
 
-austinphp:
-    displayed_name: austinphp
-    full_name:      Austin PHP User Group
-    parent:         ~
-    picture:        austinPHPlogo.svg
-    website:        http://www.meetup.com/austinphp/
-    twitter:        austinphp
-    country:        USA
-    city:           Austin
-
 afup:
     displayed_name: afup
     full_name:      Association Française des Utilisateurs de PHP (French PHP Users Group)
@@ -59,6 +49,16 @@ afup_toulouse:
     twitter:        afup_toulouse
     country:        France
     city:           Paris
+
+austinphp:
+    displayed_name: austinphp
+    full_name:      Austin PHP User Group
+    parent:         ~
+    picture:        austinphp.png
+    website:        http://www.meetup.com/austinphp/
+    twitter:        austinphp
+    country:        USA
+    city:           Austin
 
 chiphp:
     displayed_name: Chicago PHP
