Updating the image

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/php-user-groups.yml
@@ -64,7 +64,7 @@ brusselsphp:
     displayed_name: BrusselsPHP
     full_name:      Brussels PHP User Group
     parent:         ~
-    picture:        brusselsphp.png
+    picture:        brusselsphp.svg
     website:        http://www.brusselsphp.be/
     twitter:        brusselsphp
     country:        Belgium
