--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/services.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/services.yml
@@ -32,3 +32,10 @@ services:
     haphpy.gauge:
         class: AFUP\HaphpyBirthdayBundle\Model\Gauge
         arguments: [@haphpy.contribution_repository, @haphpy.pugs, "%haphpy_steps%"]
+
+    haphy.param_converter.public_contribution:
+        class: AFUP\HaphpyBirthdayBundle\ParamConverter\PublicContributionParamConverter
+        tags:
+            - { name: request.param_converter, converter: public_contribution }
+        calls:
+            - [ setEntityManager, [@doctrine] ]
