--- a/app/config/parameters.yml.dist
+++ b/app/config/parameters.yml.dist
@@ -14,6 +14,10 @@ parameters:
     mailer_user:       ~
     mailer_password:   ~
 
+    # Admin list (uses GitHub account id)
+    admins:
+        - fake_admin
+
     # A secret key that's used to generate certain security-related tokens
     secret:            ThisTokenIsNotSoSecretChangeIt
 
