--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/services.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/services.yml
@@ -1,7 +1,11 @@
 services:
     haphpy.user_provider:
         class: AFUP\HaphpyBirthdayBundle\Model\UserProvider
-        arguments: [@session]
+        arguments: [@session, @haphpy.admin_checker]
+
+    haphpy.admin_checker:
+        class: AFUP\HaphpyBirthdayBundle\Service\AdminEnabler
+        arguments: ['%admins%']
 
     haphpy.form.contribution_converter:
         class: AFUP\HaphpyBirthdayBundle\Form\Converter\ContributionConverter
