Add admin contribution list

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -31,5 +31,6 @@ security:
             anonymous: ~
 
     access_control:
+        - { path: ^/admin, roles: ROLE_ADMIN }
         - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
