Add moderationState to Contribution

--- a/src/AFUP/HaphpyBirthdayBundle/Resources/config/doctrine/Contribution.orm.yml
+++ b/src/AFUP/HaphpyBirthdayBundle/Resources/config/doctrine/Contribution.orm.yml
@@ -24,6 +24,10 @@ AFUP\HaphpyBirthdayBundle\Entity\Contribution:
         creditWanted:
             type:   boolean
             column: credit_wanted
+        moderationState:
+            type:   boolean
+            column: moderation_state
+            nullable: true
         createdAt:
             type:   datetime
             column: created_at
