--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,7 @@
   "private": true,
   "dependencies": {
     "dropify": "git://github.com/JeremyFagis/dropify#0.1.3",
-    "fontawesome": "4.4.0"
+    "fontawesome": "4.4.0",
+    "compass-mixins": "0.12.6"
   }
 }
